--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link rel="preconnect" href="https://equiply-jrej.onrender.com" />
+    <title>Equiply - Rent What You Need</title>
+    <meta name="description" content="Equiply - Your trusted platform for renting equipment and tools. From cameras to power tools, we connect you with everything you need at affordable rental rates.">
   </head>
   <body>
     <div id="root"></div>
